# project-management-backend/src/main/java/com/biswas/project_management_backend/dto/UserDto.java
@@ -5,6 +5,7 @@ import lombok.Builder;
 import lombok.Data;
 import lombok.NoArgsConstructor;
 
+import java.time.LocalDate;
 import java.util.Set;
 
 @Data
@@ -16,4 +17,7 @@ public class UserDto {
     private String username;
     private String email;
     private Set<String> roles;
+    private CompanyDto companyDto;
+    private LocalDate lastActive;
+    private String profileImageUrl;
 }
