# project-management-frontend/src/@api/apis/common-controller-api.ts
@@ -1,0 +1,111 @@
+/* tslint:disable */
+/* eslint-disable */
+/**
+ * Project Management Tool API
+ * API documentation for Project Management Tool
+ *
+ * The version of the OpenAPI document: 1.0
+ * 
+ *
+ * NOTE: This class is auto generated by OpenAPI Generator (https://openapi-generator.tech).
+ * https://openapi-generator.tech
+ * Do not edit the class manually.
+ */
+
+
+import * as runtime from '../runtime';
+import type {
+  UploadProfileImageRequest,
+} from '../models/index';
+import {
+    UploadProfileImageRequestFromJSON,
+    UploadProfileImageRequestToJSON,
+} from '../models/index';
+
+export interface UploadProfileImageOperationRequest {
+    uploadProfileImageRequest?: UploadProfileImageRequest;
+}
+
+/**
+ * 
+ */
+export class CommonControllerApi extends runtime.BaseAPI {
+
+    /**
+     */
+    async deleteProfileImageRaw(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<string>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+
+        let urlPath = `/api/common/delete-profile-image`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'DELETE',
+            headers: headerParameters,
+            query: queryParameters,
+        }, initOverrides);
+
+        if (this.isJsonMime(response.headers.get('content-type'))) {
+            return new runtime.JSONApiResponse<string>(response);
+        } else {
+            return new runtime.TextApiResponse(response) as any;
+        }
+    }
+
+    /**
+     */
+    async deleteProfileImage(initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<string> {
+        const response = await this.deleteProfileImageRaw(initOverrides);
+        return await response.value();
+    }
+
+    /**
+     */
+    async uploadProfileImageRaw(requestParameters: UploadProfileImageOperationRequest, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<runtime.ApiResponse<object>> {
+        const queryParameters: any = {};
+
+        const headerParameters: runtime.HTTPHeaders = {};
+
+        headerParameters['Content-Type'] = 'application/json';
+
+        if (this.configuration && this.configuration.accessToken) {
+            const token = this.configuration.accessToken;
+            const tokenString = await token("bearerAuth", []);
+
+            if (tokenString) {
+                headerParameters["Authorization"] = `Bearer ${tokenString}`;
+            }
+        }
+
+        let urlPath = `/api/common/upload-profile-image`;
+
+        const response = await this.request({
+            path: urlPath,
+            method: 'POST',
+            headers: headerParameters,
+            query: queryParameters,
+            body: UploadProfileImageRequestToJSON(requestParameters['uploadProfileImageRequest']),
+        }, initOverrides);
+
+        return new runtime.JSONApiResponse<any>(response);
+    }
+
+    /**
+     */
+    async uploadProfileImage(requestParameters: UploadProfileImageOperationRequest = {}, initOverrides?: RequestInit | runtime.InitOverrideFunction): Promise<object> {
+        const response = await this.uploadProfileImageRaw(requestParameters, initOverrides);
+        return await response.value();
+    }
+
+}
